<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"

        />

    <RadioButton
        android:id="@+id/rb_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/transparent"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/rb_curr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/current_wall"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/rb_defaul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/defaul"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/rb_screen_blur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/screen_blur"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/pink"
        android:textStyle="bold" />
</LinearLayout>