<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/green_m"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:text="@string/handle_settings"
            android:drawablePadding="20dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="3"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/position"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:text="@string/top"
                android:textSize="18sp"
                android:buttonTint="@color/pink"
                android:layout_height="48dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:text="@string/left"
                android:textSize="18sp"
                android:buttonTint="@color/pink"
                android:layout_height="48dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:text="@string/right"
                android:textSize="18sp"
                android:buttonTint="@color/pink"
                android:layout_height="48dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:text="@string/bottom"
                android:textSize="18sp"
                android:layout_height="48dp"
                android:buttonTint="@color/pink"/>
            <TextView
                android:layout_width="match_parent"
                android:paddingHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/grey_dak"
                android:text="@string/dragPosition"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/advanceop"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/pink"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:text="@string/size"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/pink"
                android:layout_height="wrap_content"/>
            <SeekBar
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/pink"
                android:progress="50"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:text="@string/color"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/pink"
                android:layout_height="wrap_content"/>
            <SeekBar
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:progress="50"
                android:backgroundTint="@color/pink"
                android:layout_height="wrap_content"/>
            <SeekBar
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:progress="50"
                android:backgroundTint="@color/pink"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
</LinearLayout>