<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/green_m"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="@string/handle_settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/position"
                android:textColor="@color/pink"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_top"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:buttonTint="@color/pink"
                    android:text="@string/top"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_left"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:buttonTint="@color/pink"
                    android:text="@string/left"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_right"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:buttonTint="@color/pink"
                    android:text="@string/right"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_bot"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:buttonTint="@color/pink"
                    android:text="@string/bottom"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="25dp"
                android:text="@string/dragPosition"
                android:textColor="@color/grey_dak" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanceop"
                android:textColor="@color/pink"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/size"
                android:textColor="@color/pink"
                android:textSize="15sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/pink"
                android:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/color"
                android:textColor="@color/pink"
                android:textSize="15sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/pink"
                android:progress="50" />

            <SeekBar
                android:id="@+id/sb_al"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/pink"
                android:progress="50" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/draggable_view"
        android:layout_width="5dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_blue_light" />

    <FrameLayout
        android:id="@+id/hidden_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include layout="@layout/frg_ios_utilities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>